log
Fri 05 May 2023 01:18:41 PM UTC: 
 tests:  0|5
total_score: 0/70
0da15aa
Fri 05 May 2023 06:28:28 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:10: error: unused variable ‘j’ [-Werror=unused-variable]
   54 |   int i ,j;
      |          ^
sudoku.c:54:7: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |   int i ,j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
99b5650
Fri 05 May 2023 06:29:10 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
99aee9b
Fri 05 May 2023 06:34:47 PM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b879b6c
Fri 05 May 2023 06:43:54 PM UTC: 
 sudoku.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
 tests:  5|3
total_score: 35/70
3c456ce
Fri 05 May 2023 06:44:54 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
276a602
Fri 05 May 2023 06:45:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:102:37: error: passing argument 1 of ‘is_valid’ makes pointer from integer without a cast [-Werror=int-conversion]
  102 |           if (is_valid(nodo->sudo[i][j])){
      |                        ~~~~~~~~~~~~~^~~
      |                                     |
      |                                     int
sudoku.c:46:20: note: expected ‘Node *’ but argument is of type ‘int’
   46 | int is_valid(Node* n){
      |              ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
4f551ff
Fri 05 May 2023 06:45:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
9c6f730
Fri 05 May 2023 06:45:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ccb062a
Fri 05 May 2023 06:48:09 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
fb2c142
Fri 05 May 2023 06:54:35 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
8076412
Fri 05 May 2023 06:58:20 PM UTC: 
 sudoku.c | 53 +++++++++++++++++++++++++++++++++++------------------
 1 file changed, 35 insertions(+), 18 deletions(-)
 tests:  5|3
total_score: 35/70
5ef7dd8
Fri 05 May 2023 06:58:59 PM UTC: 
 sudoku.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
7734056
Fri 05 May 2023 06:59:08 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
d14e9cc
Fri 05 May 2023 07:01:47 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
4d21376
Fri 05 May 2023 07:02:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
1ae2f2d
Fri 05 May 2023 07:08:06 PM UTC: 
 sudoku.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 20/70
bc4893f
Fri 05 May 2023 07:08:22 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
a9c5bd4
Fri 05 May 2023 07:09:30 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
542b51b
Fri 05 May 2023 07:10:37 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
9410a9c
Fri 05 May 2023 07:11:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5300c69
Fri 05 May 2023 07:12:57 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
e65af11
Fri 05 May 2023 07:14:13 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 55/70
5076a27
Fri 05 May 2023 07:15:32 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  10|0
total_score: 70/70
db1ec60
Fri 05 May 2023 07:15:40 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:163:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  163 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
c014e05
Fri 05 May 2023 07:15:46 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
c9e0180
